todo-app/manifests/backend/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: todo-backend-dep
  namespace: todo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend

  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: restart-rate

  template:
    metadata:
      labels:
        app: todo-backend

    spec:
      containers:
        - name: todo-backend
          image: mikaalaoutinen/todo-backend:latest
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /api/monitoring/readiness
              port: 8080
